force-app/main/default/objects/Service_Application_Detail__c/Service_Application_Detail__c.object-meta.xml
<CustomObject>
    <description>Created this object to capture the details of city permits</description>
    <label>Service Application Detail</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Application Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>