force-app/main/default/objects/Service_Application_Detail__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF( Account__r.RecordType.DeveloperName  = &apos;PersonAccount&apos;,  Account__r.FirstName + &apos; &apos; +  Account__r.LastName ,  Account__r.Name )</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>