force-app/main/default/objects/Service_Application_Detail__c/fields/Application_Detail_For_Payload__c.field-meta.xml
<CustomField>
    <fullName>Application_Detail_For_Payload__c</fullName>
    <label>Application Detail For Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>