force-app/main/default/objects/Service_Application_Detail__c/fields/Application_Form_Details__c.field-meta.xml
<CustomField>
    <fullName>Application_Form_Details__c</fullName>
    <label>Application Form Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>