force-app/main/default/objects/Service_Application_Detail__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <description>This field is used as external ID to store the Case Number pulled from CityWorks via OIC.</description>
    <externalId>true</externalId>
    <label>Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>