force-app/main/default/objects/Service_Application_Detail__c/fields/Application_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted_Date__c</fullName>
    <description>created this field to capture the submission date of Application</description>
    <label>Application Submitted Date</label>
    <type>Date</type>
</CustomField>