force-app/main/default/objects/Service_Application_Detail__c/fields/CaFeeId__c.field-meta.xml
<CustomField>
    <fullName>CaFeeId__c</fullName>
    <label>CaFeeId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>