force-app/main/default/objects/Service_Application_Detail__c/fields/DFD_Document_upload_Accepted__c.field-meta.xml
<CustomField>
    <fullName>DFD_Document_upload_Accepted__c</fullName>
    <formula>OR(
 ISPICKVAL( OIC_Status__c , &apos;ISSUED&apos;),
 ISPICKVAL( OIC_Status__c , &apos;REVIEW&apos;),
 ISPICKVAL( OIC_Status__c , &apos;HEARING&apos;),
 ISPICKVAL( OIC_Status__c , &apos;PENDING&apos;),
 ISPICKVAL( OIC_Status__c , &apos;INCOMPLETE&apos;),
 ISPICKVAL( OIC_Status__c , &apos;RESUBMIT&apos;),
 ISPICKVAL( OIC_Status__c , &apos;OPEN&apos;)
)</formula>
    <label>Document upload Accepted</label>
    <type>Checkbox</type>
</CustomField>