force-app/main/default/objects/Service_Application_Detail__c/fields/Event_Sponser_Producer__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponser_Producer__c</fullName>
    <label>Event Sponser/Producer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>