force-app/main/default/objects/Service_Application_Detail__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <description>Field is used to store the Event Address selected by user on DFD Portal while submitting the Special event form. Address comes from geocode API.</description>
    <label>Event Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>