force-app/main/default/objects/Service_Application_Detail__c/fields/Name_of_Authorized_and_Responsible_Agent__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Authorized_and_Responsible_Agent__c</fullName>
    <label>Name of Authorized and Responsible Agent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>