force-app/main/default/objects/Service_Application_Detail__c/fields/OIC_Payload__c.field-meta.xml
<CustomField>
    <fullName>OIC_Payload__c</fullName>
    <label>OIC Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>