force-app/main/default/objects/Service_Application_Detail__c/fields/OIC_Status__c.field-meta.xml
<CustomField>
    <fullName>OIC_Status__c</fullName>
    <label>OIC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLOSED</fullName>
            </value>
            <value>
                <fullName>FILE</fullName>
            </value>
            <value>
                <fullName>HEARING</fullName>
            </value>
            <value>
                <fullName>HOLD</fullName>
            </value>
            <value>
                <fullName>INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>OPEN</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>RESUBMIT</fullName>
            </value>
            <value>
                <fullName>REVIEW</fullName>
            </value>
            <value>
                <fullName>WITHDRAWN</fullName>
            </value>
            <value>
                <fullName>ISSUED</fullName>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
            <value>
                <fullName>DENIED</fullName>
            </value>
            <value>
                <fullName>DRAFT</fullName>
            </value>
            <value>
                <fullName>DONE</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Waiting on customer</fullName>
                <isActive>false</isActive>
                <label>Waiting on customer</label>
            </value>
            <value>
                <fullName>YYY</fullName>
                <isActive>false</isActive>
                <label>YYY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>