force-app/main/default/objects/Service_Application_Detail__c/fields/OmniScript_Saved_Session__c.field-meta.xml
<CustomField>
    <fullName>OmniScript_Saved_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OmniScript Saved Session</label>
    <referenceTo>OmniScriptSavedSession</referenceTo>
    <relationshipLabel>Service Application Details</relationshipLabel>
    <relationshipName>Service_Application_Details</relationshipName>
    <type>Lookup</type>
</CustomField>