force-app/main/default/objects/Service_Application_Detail__c/fields/PayIt_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>PayIt_Transaction_Id__c</fullName>
    <label>PayIt Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>