force-app/main/default/objects/Service_Application_Detail__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <defaultValue>&apos;Unpaid&apos;</defaultValue>
    <label>Payment Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>