force-app/main/default/objects/Service_Application_Detail__c/fields/Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>Permit_Type__c</fullName>
    <label>Permit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Special Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>