force-app/main/default/objects/Service_Application_Detail__c/fields/Request_token__c.field-meta.xml
<CustomField>
    <fullName>Request_token__c</fullName>
    <label>Request token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>