force-app/main/default/objects/Service_Application_Detail__c/fields/Synced_With_City_Works__c.field-meta.xml
<CustomField>
    <fullName>Synced_With_City_Works__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced With City Works</label>
    <type>Checkbox</type>
</CustomField>