force-app/main/default/objects/Service_Application_Detail__c/fields/Will_you_be_renting_the_bandwagon__c.field-meta.xml
<CustomField>
    <fullName>Will_you_be_renting_the_bandwagon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will you be renting the bandwagon?</label>
    <type>Checkbox</type>
</CustomField>