force-app/main/default/objects/Service_Application_Detail__c/recordTypes/DFDFW_Permits.recordType-meta.xml
<RecordType>
    <fullName>DFDFW_Permits</fullName>
    <active>true</active>
    <label>Permits</label>
</RecordType>