force-app/main/default/objects/Service_Application_Detail__c/listViews/All_Real_Applications.listView-meta.xml
<ListView>
    <fullName>All_Real_Applications</fullName>
    <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5 AND 7) AND 6</booleanFilter>
    <columns>NAME</columns>
    <columns>Application_Submitted_Date__c</columns>
    <columns>Application_Number__c</columns>
    <columns>Case_Application_Id__c</columns>
    <columns>Full_Address__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>Tejesh</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>Howser</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>Sajan</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>Sudhira</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>Su ProdTest</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>3/11/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>Angela Pearson</value>
    </filters>
    <label>All Real Applications</label>
</ListView>