force-app/main/default/objects/Service_Application_Detail__c/listViews/DFDFW_All_Submitted_Applications.listView-meta.xml
<ListView>
    <fullName>DFDFW_All_Submitted_Applications</fullName>
    <columns>NAME</columns>
    <columns>Application_Submitted_Date__c</columns>
    <columns>Application_Number__c</columns>
    <columns>Full_Address__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>All Submitted Applications</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>