force-app/main/default/objects/Service_Application_Detail__c/listViews/DFDFW_Recent_Applications_Portal_View.listView-meta.xml
<ListView>
    <fullName>DFDFW_Recent_Applications_Portal_View</fullName>
    <columns>NAME</columns>
    <columns>Application_Submitted_Date__c</columns>
    <columns>Application_Number__c</columns>
    <columns>Full_Address__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Special Event Portal View</label>
    <sharedTo>
        <group>DFDFW_Portal_Users</group>
    </sharedTo>
</ListView>