force-app/main/default/objects/Service_Application_Detail__c/listViews/DFDS001_Special_Event_Applications.listView-meta.xml
<ListView>
    <fullName>DFDS001_Special_Event_Applications</fullName>
    <columns>NAME</columns>
    <columns>Application_Submitted_Date__c</columns>
    <columns>Application_Number__c</columns>
    <columns>Full_Address__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Special Event Applications</label>
    <sharedTo>
        <group>DFDFW_Portal_Users</group>
    </sharedTo>
</ListView>