force-app/main/default/objects/Service_Application_Detail__c/listViews/OSG_Power_User_View.listView-meta.xml
<ListView>
    <fullName>OSG_Power_User_View</fullName>
    <columns>NAME</columns>
    <columns>Application_Number__c</columns>
    <columns>Application_Submitted_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Fee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Name__c</field>
        <operation>notContain</operation>
        <value>test,Test,TEST</value>
    </filters>
    <label>OSG Power User View</label>
</ListView>